# airpl_track

./: .gitignore  README.md  pyproject.toml
src/airpl_track/: __main__.py  aeroplane.py  api.py  file_handler.py  user_interface.py  utils.py
tests/: conftest.py  test_aeroplane.py  test_api.py  test_file_handler.py  test_utils.py
